feat: implement Gemini AI integration; refactor chat and embedding services to utilize new models