@@ -1,110 +1,154 @@
 package com.recruitment.platform.chat.client;
 
+import com.fasterxml.jackson.annotation.JsonInclude;
 import com.recruitment.platform.chat.config.GeminiProperties;
-import com.recruitment.platform.chat.prompt.SystemPromptProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.ai.chat.messages.AssistantMessage;
+import org.springframework.ai.chat.messages.Message;
+import org.springframework.ai.chat.messages.MessageType;
+import org.springframework.ai.chat.model.ChatModel;
+import org.springframework.ai.chat.model.ChatResponse;
+import org.springframework.ai.chat.model.Generation;
+import org.springframework.ai.chat.prompt.ChatOptions;
+import org.springframework.ai.chat.prompt.Prompt;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
+/**
+ * Custom {@link ChatModel} implementation that routes Spring AI calls
+ * to Google Gemini's REST API (Generative Language) using the existing WebClient configuration.
+ */
 @Component
-public class GeminiClient {
+public class GeminiClient implements ChatModel {
 
     private static final Logger LOG = LoggerFactory.getLogger(GeminiClient.class);
 
     private final WebClient webClient;
     private final GeminiProperties properties;
-    private final SystemPromptProvider systemPromptProvider;
 
-    public GeminiClient(WebClient.Builder webClientBuilder, GeminiProperties properties, SystemPromptProvider systemPromptProvider) {
+    public GeminiClient(WebClient.Builder webClientBuilder, GeminiProperties properties) {
         this.properties = properties;
-        this.systemPromptProvider = systemPromptProvider;
         this.webClient = webClientBuilder
             .baseUrl(properties.getBaseUrl())
             .build();
     }
 
-    public Mono<String> generateContent(List<GeminiContent> contents) {
-        GeminiRequest request = buildRequest(contents);
-        return webClient.post()
+    @Override
+    public ChatResponse call(Prompt prompt) {
+        GenerationParameters parameters = resolveParameters(prompt);
+        GeminiRequest request = buildRequest(prompt, parameters);
+        GeminiResponse response = webClient.post()
             .uri(uriBuilder -> uriBuilder
                 .path("/models/{model}:generateContent")
                 .queryParam("key", properties.getApiKey())
-                .build(properties.getModel()))
+                .build(parameters.model()))
             .contentType(MediaType.APPLICATION_JSON)
             .bodyValue(request)
             .retrieve()
             .bodyToMono(GeminiResponse.class)
-            .map(this::extractText)
-            .doOnError(error -> LOG.error("Gemini generateContent failed", error));
+            .doOnError(error -> LOG.error("Gemini generateContent thất bại", error))
+            .block();
+        return toChatResponse(response);
     }
 
-    public Flux<String> streamContent(List<GeminiContent> contents) {
-        GeminiRequest request = buildRequest(contents);
+    @Override
+    public Flux<ChatResponse> stream(Prompt prompt) {
+        GenerationParameters parameters = resolveParameters(prompt);
+        GeminiRequest request = buildRequest(prompt, parameters);
         return webClient.post()
             .uri(uriBuilder -> uriBuilder
                 .path("/models/{model}:streamGenerateContent")
                 .queryParam("key", properties.getApiKey())
-                .build(properties.getModel()))
+                .build(parameters.model()))
             .contentType(MediaType.APPLICATION_JSON)
             .bodyValue(request)
             .retrieve()
             .bodyToFlux(GeminiResponse.class)
-            .map(this::extractText)
-            .filter(text -> text != null && !text.isBlank())
-            .doOnError(error -> LOG.error("Gemini streamGenerateContent failed", error));
+            .map(this::toChatResponse)
+            .filter(response -> response != null
+                && response.getResult() != null
+                && response.getResult().getOutput() != null
+                && StringUtils.hasText(response.getResult().getOutput().getText()))
+            .doOnError(error -> LOG.error("Gemini streamGenerateContent thất bại", error));
     }
 
-    public float[] embedText(String text) {
-        GeminiEmbeddingRequest request = new GeminiEmbeddingRequest(
-            new GeminiEmbeddingContent(
-                List.of(new GeminiPart(text == null ? "" : text))
-            )
-        );
-
-        GeminiEmbeddingResponse response = webClient.post()
-            .uri(uriBuilder -> uriBuilder
-                .path("/models/{model}:embedContent")
-                .queryParam("key", properties.getApiKey())
-                .build(properties.getEmbeddingModel()))
-            .contentType(MediaType.APPLICATION_JSON)
-            .bodyValue(request)
-            .retrieve()
-            .bodyToMono(GeminiEmbeddingResponse.class)
-            .doOnError(error -> LOG.error("Gemini embedContent failed", error))
-            .block();
-
-        if (response == null || response.embedding() == null || response.embedding().values() == null) {
-            return new float[0];
-        }
-
-        List<Double> values = response.embedding().values();
-        float[] vector = new float[values.size()];
-        for (int i = 0; i < values.size(); i++) {
-            vector[i] = values.get(i).floatValue();
-        }
-        return vector;
+    private ChatResponse toChatResponse(GeminiResponse response) {
+        String text = extractText(response);
+        AssistantMessage message = new AssistantMessage(text == null ? "" : text);
+        return new ChatResponse(List.of(new Generation(message)));
     }
 
-    private GeminiRequest buildRequest(List<GeminiContent> contents) {
-        return new GeminiRequest(
-            new GeminiSystemInstruction(List.of(new GeminiPart(systemPromptProvider.getPrompt()))),
-            contents.stream()
-                .map(content -> new GeminiContentPayload(content.role(), content.parts()))
-                .collect(Collectors.toList()),
-            new GeminiGenerationConfig(
-                properties.getTemperature(),
-                properties.getTopP(),
-                properties.getMaxTokens()
-            )
+    private GeminiRequest buildRequest(Prompt prompt, GenerationParameters parameters) {
+        List<Message> instructions = prompt != null && prompt.getInstructions() != null
+            ? prompt.getInstructions()
+            : Collections.emptyList();
+        GeminiSystemInstruction systemInstruction = buildSystemInstruction(instructions);
+        List<GeminiContentPayload> contents = buildContents(instructions);
+        if (contents.isEmpty()) {
+            contents = List.of(new GeminiContentPayload("user", List.of(new GeminiPart("Chào bạn!"))));
+        }
+        GeminiGenerationConfig config = new GeminiGenerationConfig(
+            parameters.temperature(),
+            parameters.topP(),
+            parameters.maxTokens()
         );
+        return new GeminiRequest(systemInstruction, contents, config);
+    }
+
+    private GeminiSystemInstruction buildSystemInstruction(List<Message> instructions) {
+        String combined = instructions.stream()
+            .filter(message -> message.getMessageType() == MessageType.SYSTEM)
+            .map(Message::getText)
+            .filter(StringUtils::hasText)
+            .collect(Collectors.joining("\n"));
+        if (!StringUtils.hasText(combined)) {
+            return null;
+        }
+        return new GeminiSystemInstruction(List.of(new GeminiPart(combined)));
+    }
+
+    private List<GeminiContentPayload> buildContents(List<Message> instructions) {
+        List<GeminiContentPayload> contents = new ArrayList<>();
+        for (Message instruction : instructions) {
+            if (instruction == null || instruction.getMessageType() == MessageType.SYSTEM) {
+                continue;
+            }
+            String role = instruction.getMessageType() == MessageType.ASSISTANT ? "model" : "user";
+            contents.add(new GeminiContentPayload(role, List.of(new GeminiPart(
+                instruction.getText() != null ? instruction.getText() : ""
+            ))));
+        }
+        return contents;
+    }
+
+    private GenerationParameters resolveParameters(Prompt prompt) {
+        ChatOptions options = prompt != null ? prompt.getOptions() : null;
+        String model = StringUtils.hasText(options != null ? options.getModel() : null)
+            ? options.getModel()
+            : properties.getModel();
+        double temperature = options != null && options.getTemperature() != null
+            ? options.getTemperature()
+            : properties.getTemperature();
+        double topP = options != null && options.getTopP() != null
+            ? options.getTopP()
+            : properties.getTopP();
+        int maxTokens = options != null && options.getMaxTokens() != null
+            ? options.getMaxTokens()
+            : properties.getMaxTokens();
+        if (maxTokens <= 0) {
+            maxTokens = properties.getMaxTokens();
+        }
+        return new GenerationParameters(model, temperature, topP, maxTokens);
     }
 
     private String extractText(GeminiResponse response) {
@@ -122,12 +166,16 @@ public class GeminiClient {
             .collect(Collectors.joining());
     }
 
+    private record GenerationParameters(String model, double temperature, double topP, int maxTokens) {
+    }
+
     public record GeminiContent(String role, List<GeminiPart> parts) {
     }
 
     public record GeminiPart(String text) {
     }
 
+    @JsonInclude(JsonInclude.Include.NON_NULL)
     private record GeminiRequest(
         GeminiSystemInstruction systemInstruction,
         List<GeminiContentPayload> contents,
@@ -135,39 +183,18 @@ public class GeminiClient {
     ) {
     }
 
-    private record GeminiSystemInstruction(
-        List<GeminiPart> parts
-    ) {
+    private record GeminiSystemInstruction(List<GeminiPart> parts) {
     }
 
-    private record GeminiContentPayload(
-        String role,
-        List<GeminiPart> parts
-    ) {
+    private record GeminiContentPayload(String role, List<GeminiPart> parts) {
     }
 
-    private record GeminiGenerationConfig(
-        double temperature,
-        double topP,
-        int maxOutputTokens
-    ) {
+    private record GeminiGenerationConfig(double temperature, double topP, int maxOutputTokens) {
     }
 
-    private record GeminiResponse(
-        List<GeminiCandidate> candidates
-    ) {
+    private record GeminiResponse(List<GeminiCandidate> candidates) {
     }
 
-    private record GeminiCandidate(
-        GeminiContent content
-    ) {
+    private record GeminiCandidate(GeminiContent content) {
     }
-
-    private record GeminiEmbeddingRequest(GeminiEmbeddingContent content) {}
-
-    private record GeminiEmbeddingContent(List<GeminiPart> parts) {}
-
-    private record GeminiEmbeddingResponse(GeminiEmbedding embedding) {}
-
-    private record GeminiEmbedding(List<Double> values) {}
 }
